<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#101E17"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/image_paywall_plant"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/paywall_background"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageButton
        android:id="@+id/close_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_premium_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plant_app_premium"
        android:layout_marginTop="276dp"
        android:textColor="#fff"
        android:textSize="27sp"
        android:fontFamily="@font/roboto"
        android:layout_marginStart="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_premium_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/access_all_features"
        android:textColor="#B3FFFFFF"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_premium_title"
        app:layout_constraintTop_toBottomOf="@id/text_premium_title" />

    <LinearLayout
        android:id="@+id/card_premium_features"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/text_premium_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:id="@+id/layout_unlimited"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/bg_rounded_dark_12dp"
            android:padding="16dp"
            android:layout_marginEnd="8dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_scanner" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Unlimited"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plant_identify"
                android:textColor="#A9A9A9"
                android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_faster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/bg_rounded_dark_12dp"
            android:padding="16dp"
            android:layout_marginStart="8dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_speedometer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/faster_text"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/process"
                android:textColor="#A9A9A9"
                android:textSize="12sp"/>

        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_price_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_selector"
        android:padding="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_premium_features">

        <ImageView
            android:id="@+id/image_radio_month"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_radio_unchecked"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_price_month_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/one_month"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/image_radio_month"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_price_month_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/month_auto_renewable"
            android:textColor="#A9A9A9"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@id/image_radio_month"
            app:layout_constraintTop_toBottomOf="@id/text_price_month_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_price_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_selector"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/layout_price_month"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/image_radio_year"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="14dp"
            android:src="@drawable/ic_radio_unchecked"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/text_price_year_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1 Year"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/image_radio_year"/>

        <TextView
            android:id="@+id/text_price_year_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_3_days_free"
            android:textColor="#A9A9A9"
            android:textSize="12sp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/image_radio_year"
            app:layout_constraintTop_toBottomOf="@id/text_price_year_title" />

        <TextView
            android:id="@+id/text_save_percentage"
            android:layout_width="76dp"
            android:layout_height="26dp"
            android:text="@string/save_50"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:visibility="gone"
            android:background="@drawable/bg_percentage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_try_free"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_rounded_button_12dp"
        android:text="@string/try_button_text"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_price_year" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:textSize="9sp"
        android:text="@string/paywall_3_day_text"
        android:textColor="#85FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_try_free" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:textSize="11sp"
        android:textColor="#85FFFFFF"
        android:text="@string/terms_privacy_restore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout> 