<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F8F6">

    <TextView
        android:id="@+id/text_onboarding_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:gravity="start"
        android:layout_marginTop="46dp"
        android:fontFamily="@font/roboto"
        android:text="@string/title"
        android:textColor="#13231B"
        android:textSize="28sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_onboarding_desc"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/description"
        android:textColor="#B313231B"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_onboarding_title"
        app:layout_constraintTop_toBottomOf="@id/text_onboarding_title" />

    <ImageView
        android:id="@+id/image_onboarding"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_plant"
        app:layout_constraintBottom_toTopOf="@+id/button_onboarding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_onboarding"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:background="@drawable/bg_rounded_button_12dp"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="74dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <TextView
        android:id="@+id/text_onboarding_terms"
        android:layout_width="232dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/terms_privacy_text"
        android:textColor="#597165B2"
        android:textSize="11sp"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_onboarding" />

    <LinearLayout
        android:id="@+id/layout_page_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_onboarding" />

</androidx.constraintlayout.widget.ConstraintLayout>